src/tests/fixtures/typename/PropertyTypenameNoInitializer.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename: string;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameNoInitializer.ts:3:15 - error: Expected `__typename` property signature to specify the typename as a string literal string type. For example `__typename: "User";`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename: string;
                ~~~~~~


-- Code Action: "Create Grats-compatible `__typename` type" (fix-typename-type) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User {
-   __typename: string;
+   __typename: "User";
    /** @gqlField */